Refactor index.html for game HUD and styling
Refactor HTML and JavaScript for 3D Car Racer game. Updated styling, removed menu, and improved HUD display.

--- a/index.html
+++ b/index.html
@@ -4,201 +4,42 @@
     <meta charset="UTF-8" />
     <title>3D Car Racer</title>
     <style>
-        :root { color-scheme: dark; }
-        * { box-sizing: border-box; }
         body {
             margin: 0;
             overflow: hidden;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
             background: #020617;
-            color: #e5e7eb;
+            font-family: Arial, sans-serif;
+            color: white;
         }
 
-        /* Menu overlay */
-        #menu {
-            position: fixed;
-            inset: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: radial-gradient(circle at top, rgba(15,23,42,0.96), rgba(2,6,23,0.96));
-            z-index: 10;
-        }
-
-        .menu-panel {
-            width: 340px;
-            padding: 24px 24px 20px;
-            border-radius: 16px;
-            background: rgba(15,23,42,0.95);
-            box-shadow: 0 24px 60px rgba(0,0,0,0.9);
-            border: 1px solid #1f2937;
-        }
-
-        .menu-title { margin: 0 0 4px; font-size: 22px; font-weight: 700; }
-        .menu-subtitle { margin: 0 0 16px; font-size: 13px; color: #9ca3af; }
-
-        .field-label {
-            display: block;
-            font-size: 12px;
-            margin-top: 10px;
-            margin-bottom: 4px;
-            text-transform: uppercase;
-            letter-spacing: 0.04em;
-            color: #9ca3af;
-        }
-
-        .field-input,
-        .field-select {
-            width: 100%;
-            padding: 8px 10px;
-            border-radius: 8px;
-            border: 1px solid #1f2937;
-            background: #020617;
-            color: #e5e7eb;
-            font-size: 14px;
-        }
-
-        .field-input:focus,
-        .field-select:focus {
-            outline: none;
-            border-color: #3b82f6;
-            box-shadow: 0 0 0 1px #3b82f6;
-        }
-
-        .menu-buttons {
-            display: flex;
-            gap: 8px;
-            margin-top: 18px;
-        }
-
-        .btn {
-            flex: 1 1 auto;
-            padding: 9px 10px;
-            border-radius: 999px;
-            border: none;
-            font-size: 14px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: background 0.15s ease, transform 0.05s ease;
-        }
-
-        .btn-primary {
-            background: linear-gradient(to right, #2563eb, #1d4ed8);
-            color: #f9fafb;
-        }
-
-        .btn-primary:hover {
-            background: linear-gradient(to right, #1d4ed8, #1e40af);
-        }
-
-        .btn-secondary {
-            background: #16a34a;
-            color: #ecfdf5;
-        }
-
-        .btn-secondary:hover {
-            background: #15803d;
-        }
-
-        .btn:active { transform: scale(0.98); }
-
-        .menu-footer {
-            margin-top: 10px;
-            font-size: 11px;
-            color: #6b7280;
-        }
-
-        /* HUD */
         #hud {
             position: fixed;
             top: 10px;
             left: 10px;
-            padding: 8px 12px;
-            border-radius: 12px;
-            background: rgba(15,23,42,0.85);
-            border: 1px solid rgba(31,41,55,0.8);
-            color: #e5e7eb;
-            font-size: 12px;
-            display: none;
-            z-index: 5;
-            backdrop-filter: blur(10px);
+            padding: 10px 14px;
+            background: rgba(0,0,0,0.5);
+            border-radius: 8px;
+            font-size: 14px;
+            z-index: 10;
         }
-
-        #hud div { margin-bottom: 2px; }
-        #hud div:last-child { margin-bottom: 0; }
     </style>
 </head>
 <body>
 
-<!-- MENU -->
-<div id="menu">
-    <div class="menu-panel">
-        <h1 class="menu-title">3D Car Racer</h1>
-        <p class="menu-subtitle">Choose your car and driver, then hit Start to race.</p>
-
-        <label class="field-label" for="playerName">Player name</label>
-        <input id="playerName" class="field-input" placeholder="Your name" autocomplete="off" />
-
-        <label class="field-label" for="carSelect">Car</label>
-        <select id="carSelect" class="field-select">
-            <option value="sport">Sport • fast & light</option>
-            <option value="muscle">Muscle • strong & heavy</option>
-            <option value="kart">Kart • agile & grippy</option>
-        </select>
-
-        <label class="field-label" for="driverSelect">Driver style</label>
-        <select id="driverSelect" class="field-select">
-            <option value="balanced">Balanced • neutral</option>
-            <option value="aggressive">Aggressive • oversteer</option>
-            <option value="smooth">Smooth • high grip</option>
-        </select>
-
-        <div class="menu-buttons">
-            <button id="startBtn" class="btn btn-primary">Start game</button>
-            <button id="multiBtn" class="btn btn-secondary">Multiplayer</button>
-        </div>
-
-        <p class="menu-footer">
-            Controls: W/S to accelerate & brake, A/D to steer. Multiplayer requires a WebSocket server (not wired yet).
-        </p>
-    </div>
-</div>
-
-<!-- HUD -->
-<div id="hud">
-    <div id="hudName">Player: –</div>
-    <div id="hudCar">Car: –</div>
-    <div id="hudSpeed">Speed: 0</div>
-</div>
+<div id="hud">Speed: <span id="speed">0</span></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
 
 <script>
-// ------------ CONFIG & DOM ------------
-const menu = document.getElementById("menu");
-const hud = document.getElementById("hud");
-const hudName = document.getElementById("hudName");
-const hudCar = document.getElementById("hudCar");
-const hudSpeed = document.getElementById("hudSpeed");
-
-const playerNameInput = document.getElementById("playerName");
-const carSelect = document.getElementById("carSelect");
-const driverSelect = document.getElementById("driverSelect");
-const startBtn = document.getElementById("startBtn");
-const multiBtn = document.getElementById("multiBtn");
-
-const config = {
-    playerName: "Player",
-    carType: "sport",
-    driverType: "balanced"
-};
-
-// ------------ THREE.JS SETUP ------------
+// ---------------- BASIC SETUP ----------------
 let scene, camera, renderer, car;
 let speed = 0;
 const keys = {};
 
-function init3D() {
+init();
+animate();
+
+function init() {
     scene = new THREE.Scene();
     scene.background = new THREE.Color(0x020617);
 
@@ -210,139 +51,102 @@ function init3D() {
     );
     camera.position.set(0, 6, 12);
 
-    renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer = new THREE.WebGLRenderer({ antialias:true });
     renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
     document.body.appendChild(renderer.domElement);
 
+    // Lights
     const hemi = new THREE.HemisphereLight(0xffffff, 0x111827, 0.8);
     scene.add(hemi);
 
     const dir = new THREE.DirectionalLight(0xffffff, 1);
-    dir.position.set(15, 25, -10);
+    dir.position.set(10,20,-10);
     scene.add(dir);
 
+    // Ground
     const ground = new THREE.Mesh(
-        new THREE.PlaneGeometry(200, 200),
-        new THREE.MeshStandardMaterial({ color: 0x020617 })
+        new THREE.PlaneGeometry(500,500),
+        new THREE.MeshStandardMaterial({ color:0x0f172a })
     );
-    ground.rotation.x = -Math.PI / 2;
+    ground.rotation.x = -Math.PI/2;
     scene.add(ground);
 
+    // Car
+    createCar();
+
+    // Controls
     window.addEventListener("keydown", e => keys[e.code] = true);
     window.addEventListener("keyup", e => keys[e.code] = false);
     window.addEventListener("resize", onResize);
 }
 
-function createCarFromConfig() {
-    if (car) scene.remove(car);
+function createCar() {
     car = new THREE.Group();
 
-    let bodyColor = 0xff4444;
-    let maxSpeed = 40;
-    let accel = 20;
-    let grip = 1;
-
-    if (config.carType === "sport") {
-        bodyColor = 0x22c55e;
-        maxSpeed = 55; accel = 22; grip = 0.9;
-    } else if (config.carType === "muscle") {
-        bodyColor = 0xf97316;
-        maxSpeed = 45; accel = 26; grip = 0.8;
-    } else if (config.carType === "kart") {
-        bodyColor = 0x3b82f6;
-        maxSpeed = 30; accel = 16; grip = 1.2;
-    }
-
-    if (config.driverType === "aggressive") grip *= 0.8;
-    if (config.driverType === "smooth") grip *= 1.1;
-
-    car.userData.maxSpeed = maxSpeed;
-    car.userData.accel = accel;
-    car.userData.grip = grip;
-
-    const bodyMat = new THREE.MeshStandardMaterial({
-        color: bodyColor,
-        roughness: 0.35,
-        metalness: 0.8
-    });
-    const bodyGeo = new THREE.BoxGeometry(2, 0.6, 4);
-    const body = new THREE.Mesh(bodyGeo, bodyMat);
+    const body = new THREE.Mesh(
+        new THREE.BoxGeometry(2,0.6,4),
+        new THREE.MeshStandardMaterial({ color:0xff3333 })
+    );
     body.position.y = 0.7;
     car.add(body);
 
-    const wheelGeo = new THREE.CylinderGeometry(0.45, 0.45, 0.4, 20);
-    const wheelMat = new THREE.MeshStandardMaterial({ color: 0x111827 });
+    const wheelGeo = new THREE.CylinderGeometry(0.45,0.45,0.4,20);
+    const wheelMat = new THREE.MeshStandardMaterial({ color:0x111111 });
 
-    function wheel(x, z) {
+    function wheel(x,z) {
         const w = new THREE.Mesh(wheelGeo, wheelMat);
-        w.rotation.z = Math.PI / 2;
-        w.position.set(x, 0.35, z);
+        w.rotation.z = Math.PI/2;
+        w.position.set(x,0.35,z);
         return w;
     }
 
-    car.add(wheel(0.95, 1.4));
-    car.add(wheel(-0.95, 1.4));
-    car.add(wheel(0.95, -1.4));
-    car.add(wheel(-0.95, -1.4));
+    car.add(wheel(0.95,1.4));
+    car.add(wheel(-0.95,1.4));
+    car.add(wheel(0.95,-1.4));
+    car.add(wheel(-0.95,-1.4));
 
-    car.position.set(0, 0, 0);
+    car.position.set(0,0,0);
     scene.add(car);
-    speed = 0;
 }
 
-// ------------ GAME FLOW ------------
-function startGame() {
-    config.playerName = playerNameInput.value.trim() || "Player";
-    config.carType = carSelect.value;
-    config.driverType = driverSelect.value;
-
-    createCarFromConfig();
-
-    hudName.textContent = "Player: " + config.playerName;
-    hudCar.textContent = `Car: ${config.carType} (${config.driverType})`;
-    hud.style.display = "block";
-    menu.style.display = "none";
-}
-
+// ---------------- GAME LOOP ----------------
 function updateCar() {
-    if (!car) return;
+    const accel = 20;
+    const maxSpeed = 50;
+    const grip = 1;
 
-    const accel = car.userData.accel || 20;
-    const maxSpeed = car.userData.maxSpeed || 40;
-    const grip = car.userData.grip || 1;
-
+    // Acceleration
     if (keys["KeyW"]) speed += accel * 0.02;
     if (keys["KeyS"]) speed -= accel * 0.02;
 
+    // Clamp speed
     speed = Math.max(Math.min(speed, maxSpeed), -maxSpeed);
 
+    // Natural slowdown
     if (!keys["KeyW"] && !keys["KeyS"]) {
-        if (speed > 0) {
-            speed -= 8 * 0.02;
-            if (speed < 0) speed = 0;
-        } else if (speed < 0) {
-            speed += 8 * 0.02;
-            if (speed > 0) speed = 0;
-        }
+        if (speed > 0) speed -= 8 * 0.02;
+        if (speed < 0) speed += 8 * 0.02;
+        if (Math.abs(speed) < 0.1) speed = 0;
     }
 
-    let steerInput = 0;
-    if (keys["KeyA"]) steerInput += 1;
-    if (keys["KeyD"]) steerInput -= 1;
+    // Steering
+    let steer = 0;
+    if (keys["KeyA"]) steer += 1;
+    if (keys["KeyD"]) steer -= 1;
 
-    const steerFactor = (speed / maxSpeed) * grip;
-    car.rotation.y += steerInput * steerFactor * 0.05;
+    car.rotation.y += steer * (speed/maxSpeed) * grip * 0.05;
 
-    const forward = new THREE.Vector3(0, 0, -1).applyQuaternion(car.quaternion);
+    // Movement
+    const forward = new THREE.Vector3(0,0,-1).applyQuaternion(car.quaternion);
     car.position.addScaledVector(forward, speed * 0.02);
 
-    const camOffset = new THREE.Vector3(0, 6, 12).applyQuaternion(car.quaternion);
-    const targetPos = car.position.clone().add(camOffset);
-    camera.position.lerp(targetPos, 0.1);
-    camera.lookAt(car.position.clone().add(new THREE.Vector3(0, 1.2, 0)));
+    // Camera follow
+    const camOffset = new THREE.Vector3(0,6,12).applyQuaternion(car.quaternion);
+    camera.position.lerp(car.position.clone().add(camOffset), 0.1);
+    camera.lookAt(car.position);
 
-    hudSpeed.textContent = "Speed: " + Math.round(speed);
+    // HUD
+    document.getElementById("speed").textContent = Math.round(speed);
 }
 
 function animate() {
@@ -352,25 +156,13 @@ function animate() {
 }
 
 function onResize() {
-    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.aspect = window.innerWidth/window.innerHeight;
     camera.updateProjectionMatrix();
     renderer.setSize(window.innerWidth, window.innerHeight);
 }
-
-// ------------ EVENT WIRING ------------
-startBtn.addEventListener("click", () => {
-    console.log("Start button clicked"); // debug trace
-    startGame();
-});
-
-multiBtn.addEventListener("click", () => {
-    alert("Multiplayer not wired yet (needs WebSocket server).");
-});
-
-// INIT
-init3D();
-animate();
 </script>
+
 </body>
 </html>
 
+    
